--- a/source/views/devtools-panel.html
+++ b/source/views/devtools-panel.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PM2 DevTools</title>
   </head>
-  <body class="theme-dark">
+  <body>
     <div id="devtools-root"></div>
   </body>
 </html>
